fix theme icon in mobile view with z-index

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -31,7 +31,7 @@ body{
     align-items: center;
     transition: 0s;
     transform: scale(0.3);
-    z-index: -1;
+    z-index: 100;
 }
 .theme-container:hover {
     opacity: 0.8;
